chore: spacing and menu fixes

--- a/src/tags/app-header/app-header.style.module.scss
+++ b/src/tags/app-header/app-header.style.module.scss
@@ -26,19 +26,19 @@ $pageLinksHeight: 3.5rem;
   height: $size;
   align-items: center;
   font-weight: 500;
+  background-color: var(--color-background);
   --section-color: var(--color-foreground);
   &::before {
-    z-index: -1;
+    content: "";
     pointer-events: none;
     position: absolute;
-    content: "";
     left: 0;
     right: 0;
+    bottom: -2rem;
+    height: 2rem;
     margin-left: calc(-1 * var(--root-gap));
     margin-right: calc(-1 * var(--root-gap));
-    top: 0;
-    bottom: -5%;
-    background: linear-gradient(var(--color-background) 90%, transparent);
+    background: linear-gradient(to bottom, var(--color-background), transparent);
   }
 
   :global(.show-mobile-menu) & {
